--- a/frontend/src/app/User-Features/item/item.component.css
+++ b/frontend/src/app/User-Features/item/item.component.css
@@ -160,6 +160,24 @@
   font-size: 12px; 
 }
 
+.add-review {
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 10px;
+  padding: 12px;
+  border: none;
+  border-radius: 4px;
+  background-color: #4CAF50; 
+  color: white;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+  font-size: 14px; 
+}
+
+.add-review:hover {
+  background-color: #45cb4b;
+}
+
 
 .card-footer button.btn-danger:hover {
   background-color: #bd2130;
