--- a/frontend/src/app/User-Features/item/item.component.css
+++ b/frontend/src/app/User-Features/item/item.component.css
@@ -131,6 +131,18 @@
 
 }
 
+.card-footer button.btn-edit {
+  background-color: #9135dc; 
+  color: #fff;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin: 10px;
+  transition: background-color 0.3s ease-in-out;
+
+}
+
 .add-to-basket {
   display: block;
   margin: 0 auto;
