Fixes on GPs page and Flash Messages

--- a/frontend/src/app/flash-message/flash-message.component.css
+++ b/frontend/src/app/flash-message/flash-message.component.css
@@ -4,10 +4,18 @@
     left: 50%;
     transform: translateX(-50%);
     padding: 10px;
-    background-color: #000000;
-    color: red;
     border-radius: 9px;
     z-index: 1000;
     text-align: center;
-    
-}
+  }
+  
+  .success {
+    background-color: #28a745;
+    color: white;
+  }
+  
+  .error {
+    background-color: #dc3545; 
+    color: white;
+  }
+  
