--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -28,7 +28,7 @@
 
     <ng-container *ngIf="isLoggedIn() && isGP()">
       <a routerLink="/gp-appointments">Appointments</a>
-      <a routerLink="/all-patients">Patients</a>
+      <a routerLink="/gp-patients">Patients</a>
       <a routerLink="/gp-profile">Account</a>
     </ng-container>
 
