--- a/frontend/src/app/flash-message/flash-message.component.html
+++ b/frontend/src/app/flash-message/flash-message.component.html
@@ -1,3 +1,3 @@
-<div *ngIf="message" class="flash-message">
+<div *ngIf="message" [class]="type === 'error' ? 'flash-message error' : 'flash-message success'">
     {{ message }}
 </div>
